# surfer-ternary-waveviewer

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  default_config.toml  package-lock.json
.github/workflows/: deploy-pages.yml
btern-translator/: Cargo.toml
btern-translator/src/: lib.rs
docs/: README.md
docs/commands/: README.md
docs/plugins/: mapping.md
examples/: analog.vcd  arrays_nvc.fst  btern_translator.wasm  smallsurfer.vcd
instruction-decoder/: Cargo.toml
instruction-decoder/src/: lib.rs  specs.rs
libsurfer/: Cargo.toml
libsurfer/src/: analog_renderer.rs  batch_commands.rs  benchmark.rs  channels.rs  clock_highlighting.rs  command_parser.rs  command_prompt.rs  config.rs  cxxrtl_container.rs  data_container.rs  dialog.rs  displayed_item.rs  displayed_item_tree.rs  drawing_canvas.rs  file_dialog.rs  file_watcher.rs  frame_buffer.rs  fzcmd.rs  graphics.rs  help.rs  hierarchy.rs  keyboard_shortcuts.rs  keys.rs  lib.rs  logs.rs  marker.rs  menus.rs  message.rs  mousegestures.rs  overview.rs  server_file_window.rs  state.rs  state_file_io.rs  state_util.rs  statusbar.rs  system_state.rs  time.rs  toolbar.rs  tooltips.rs  transaction_container.rs  (+12 more)
surfer/: Cargo.toml  index.html
surfer-translation-types/src/: lib.rs  result.rs  translator.rs
surfer-vscode/: .vscodeignore  build_extension.sh
surfer-vscode/extension/: .vscodeignore  package-in.json  package-lock.json
surfer/assets/: mrcs-surfer-bridge.js
surfer/src/: main.rs
surver/src/: lib.rs  (+2 more)
themes/: rose-pine-dawn.toml  rose-pine-moon.toml  rose-pine.toml
tools/: png_to_rgb_vcd.py
(+30 files in other folders)
