[package]
name = "surfer"
version.workspace = true
license.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
build = "build.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[features]
default = ["performance_plot", "wasm_plugins"]
accesskit = ["libsurfer/accesskit"]
f128 = ["libsurfer/f128"]
performance_plot = ["libsurfer/performance_plot"]
python = ["libsurfer/python"]
# Enable when building the wasm32 target for the VS Code extension.
# Propagates to libsurfer and activates VS Code-specific behaviour.
# Use #[cfg(all(target_arch = "wasm32", feature = "vscode"))]
# for VS Code-specific code.
# Use #[cfg(all(target_arch = "wasm32", not(feature = "vscode")))]
# for browser-specific code.
vscode = ["libsurfer/vscode"]
wasm_plugins = ["libsurfer/wasm_plugins"]

[dependencies]
camino.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
emath.workspace = true
eyre.workspace = true
libsurfer = { path = "../libsurfer", default-features = false }
png.workspace = true
ron.workspace = true
simple-eyre.workspace = true
surver.workspace = true
tokio = { workspace = true, features = ["rt", "time", "macros"] }
tracing.workspace = true

[build-dependencies]
vergen-gitcl = { workspace = true, features = ["build"] }
